--- a/servicios.html
+++ b/servicios.html
@@ -330,7 +330,76 @@
 				</div>
 
 			</div>
+
+			<!-- //*Fotovoltaico*/ -->
+			<div class="our_services__industria ">
+				<div class="our_services__industria__text container-sm">
+					<h1>Industria</h1>
+					<p>La gran oferta de servicios que ponemos a tudisposición, cumple con los requerimientos y
+						necesidades que un cliente necesita, ya sea, parael sector industrial o comercial. Nuestros productos
+						siempre están garantizados.</p>
+			
+				</div>
+
+
+				<div class="our_services__industria__imagen">
+					<img src="./img/services/ind.png" alt="services" width="100%" height="100%" />
+				</div>
+			</div>
 				
+		</div>
+
+		<div class="benefit">
+			<div class="container-sm">
+				<h1 class="title">BENEFICIOS</h1>
+
+				<div class="benefit__grid">
+
+					<div class="benefit__grid__item">
+
+						<div class="benefit__grid__item__icon">
+							<img src="./img/services/ahorro.png" alt="benefit" width="100%" height="100%" />
+						</div>
+
+						<div class="benefit__grid__item__text">
+							<h1>Ahorro de hasta un 99%</h1>
+							<p>¡Deja de dar vueltas! reduce tus gastos de energía de
+									manera notable. Los paneles solares son tu mejor opción</p>
+						</div>
+					</div>
+
+					<div class="benefit__grid__item">
+
+						<div class="benefit__grid__item__icon">
+							<img src="./img/services/energía.png" alt="benefit" width="100%" height="100%" />
+						</div>
+
+						<div class="benefit__grid__item__text">
+							<h1>Consumo mínimo de hasta 50%.</h1>
+							<p>Para nosotros es vital verteprosperar porque al crecer tú
+								crecemos todos.</p>
+						</div>
+					</div>
+
+					<div class="benefit__grid__item">
+
+						<div class="benefit__grid__item__icon">
+							<img src="./img/services/post-venta.png" alt="benefit" width="100%" height="100%" />
+						</div>
+
+						<div class="benefit__grid__item__text">
+							<h1>Servicio post-venta.</h1>
+							<p>Para nosotros es vital verteprosperar porque al crecer tú
+								crecemos todos.</p>
+						</div>
+					</div>
+						
+				</div>
+
+				<h1 class="subtitle">Tu que pagas grandes cantidades de dinero en luz ¡Te estamos buscando!</h1>
+				<p class="subtitle">Queremos que te ahorres ese dinero que gastas en tu consumo de luz y gas.Acércate con nosotros y ahórrate hasta un 95% de lo que gastas.</p>
+				<a class="benefit__button"  href="" >¡Cotiza hoy mismo!</a>
+			</div>
 		</div>
 
 	</main>
