--- a/servicios.html
+++ b/servicios.html
@@ -67,7 +67,7 @@
 
 					</button>
 
-					<a class="header__desktop__pages--three" href="" >
+					<a class="header__desktop__pages--three" href="./servicios.html" >
 						OFERTA DE SERVICIOS
 
 						<div class="header__desktop__pages--three__form">
@@ -155,9 +155,9 @@
 				<button class="menu__link--two">ACERCA DE</button>
 				<div class="menu__link__submenu">
 					<a class="menu__link--two" href="./nosotros.html" >NOSOTROS</a><hr>
-					<a class="menu__link--two" href="" >GALERIA</a>
+					<a class="menu__link--two" href="./galeria.html" >GALERIA</a>
 				</div>
-				<hr><a class="menu__link--three" href="" >OFERTA DE SERVICIOS</a><hr>
+				<hr><a class="menu__link--three" href="./servicios.html" >OFERTA DE SERVICIOS</a><hr>
 				<a class="menu__link--four" href="" >PRODUCTOS</a><hr>
 				<a class="menu__link--five" href="" >¿CÓMO SOY DISTRIBUIDOR?</a><hr>
 				<a class="menu__link--six" href="" >BLOG</a><hr>
@@ -170,7 +170,7 @@
 
 	<nav class="submenu">
 		<a href="./nosotros.html" >Nosotros</a>
-		<a href="" >Galeria</a>
+		<a href="./galeria.html" >Galeria</a>
 	</nav>
 
 	<aside class="media">
