--- a/servicios.html
+++ b/servicios.html
@@ -226,8 +226,8 @@
 
                 <div class="offer__text">
                     <h1>OFERTA DE SERVICIOS</h1>
-                    <p>Ofrecemos a nuestros clientes clientes las mejoressoluciones en energía para sus casas, negocios,
-                        hoteles o cualquiera que sea su actividad para quese ahorren una buena luz.</p>
+                    <p>Ofrecemos a nuestros clientes las mejores soluciones en energía para sus casas, negocios,
+                        hoteles o cualquiera que sea su actividad para que se ahorren una buena luz.</p>
                     <br>
                     <p>Para nosotros es vital verte prosperar porque al
                         crecer tú crecemos todos.</p>
@@ -241,7 +241,7 @@
 
                 <div class="renewable__title_subtitle">
                     <h1>Energía renovable ¡Tu mejor opción!</h1>
-                    <p>El uso de sistemas fotovoltaicos, térmicos solares o luminosos no es una moda, actualmente representauna excelente alternativa hacia las personas para que se ahorren mucho dinero.</p>
+                    <p>El uso de sistemas fotovoltaicos, térmicos solares o luminosos no es una moda, actualmente representa una excelente alternativa hacia las personas para que se ahorren mucho dinero.</p>
                 </div>
 
                 <div class="renewable__grid">
@@ -299,7 +299,7 @@
 							hacia CFE.</p>
 						<br><h2>Interconexión</h2><br>
 						<p>Nuestros productos son los más confiables en el mercado, con nuestro sistema de interconexión solar
-							con la CFE, notaras desde el primer bimestre un granahorro garantizado en los pagos a tu recibo y
+							con la CFE, notaras desde el primer bimestre un gran ahorro garantizado en los pagos a tu recibo y
 							consumo eléctrico.</p><br>
 							<br><h2>Los beneficios que te ofrecemos:</h2><br>
 						<p>> Instalación fácil de realizar sobre cualquier tipo de superficie.</p>
@@ -325,8 +325,8 @@
 
 				<div class="our_services__residencial__text container-sm">
 					<h1>Residencial</h1>
-					<p>Nuestra variedad de equipos están aptos para serempleados en cualquier tipo de proyecto, cumpliendo
-						con ello, las necesidades de cada cliente en ahorro deenergía y dinero.</p>
+					<p>Nuestra variedad de equipos están aptos para ser empleados en cualquier tipo de proyecto, cumpliendo
+						con ello, las necesidades de cada cliente en ahorro de energía y dinero.</p>
 				</div>
 
 			</div>
@@ -335,8 +335,8 @@
 			<div class="our_services__industria ">
 				<div class="our_services__industria__text container-sm">
 					<h1>Industria</h1>
-					<p>La gran oferta de servicios que ponemos a tudisposición, cumple con los requerimientos y
-						necesidades que un cliente necesita, ya sea, parael sector industrial o comercial. Nuestros productos
+					<p>La gran oferta de servicios que ponemos a tu disposición, cumple con los requerimientos y
+						necesidades que un cliente necesita, ya sea, para el sector industrial o comercial. Nuestros productos
 						siempre están garantizados.</p>
 			
 				</div>
@@ -376,7 +376,7 @@
 
 						<div class="benefit__grid__item__text">
 							<h1>Consumo mínimo de hasta 50%.</h1>
-							<p>Para nosotros es vital verteprosperar porque al crecer tú
+							<p>Para nosotros es vital verte prosperar porque al crecer tú
 								crecemos todos.</p>
 						</div>
 					</div>
@@ -389,7 +389,7 @@
 
 						<div class="benefit__grid__item__text">
 							<h1>Servicio post-venta.</h1>
-							<p>Para nosotros es vital verteprosperar porque al crecer tú
+							<p>Para nosotros es vital verte prosperar porque al crecer tú
 								crecemos todos.</p>
 						</div>
 					</div>
