--- a/galeria.html
+++ b/galeria.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="Venta e instalación de paneles Solares en Playa del Carmen. La mejor calidad y precio solo instalando Paneles solares en Playa del Carmen" />
 	<link rel="stylesheet" href="css/main.css">
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	
 </head>
@@ -269,36 +269,36 @@
                 </div>
 
                 <div class="carousel catalog__carousel_fotovoltaico">
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-1.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-2.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-3.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-4.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-5.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-6.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-7.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-8.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-9.jpg"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-1.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-2.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-3.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-4.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-5.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-6.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-7.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-8.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-9.jpg" width="100%" height="100%"></div>
                 </div>
 
                 <div class="carousel catalog__carousel_termico">
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-10.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-11.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-12.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-13.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-14.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-15.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-16.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-17.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-18.jpg"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-10.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-11.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-12.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-13.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-14.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-15.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-16.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-17.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-18.jpg" width="100%" height="100%"></div>
                 </div>
 
                 <div class="carousel catalog__carousel_ilumination">
-                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-19.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-20.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-21.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-22.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-23.jpg"></div>
-                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-24.jpg"></div>
+                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-19.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-20.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-21.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-22.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-23.jpg" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-24.jpg" width="100%" height="100%"></div>
                 </div>
             </div>
         </div>
