--- a/plantilla.html
+++ b/plantilla.html
@@ -69,7 +69,7 @@
 
 					</button>
 
-					<a class="header__desktop__pages--three" href="" >
+					<a class="header__desktop__pages--three" href="./servicios.html" >
 						OFERTA DE SERVICIOS
 
 						<div class="header__desktop__pages--three__form">
@@ -79,7 +79,7 @@
 						</div>
 					</a>
 
-					<a class="header__desktop__pages--four" href="" >
+					<a class="header__desktop__pages--four" href="./products.html" >
 						PRODUCTOS
 
 						<div class="header__desktop__pages--four__form">
@@ -157,10 +157,10 @@
 				<button class="menu__link--two">ACERCA DE</button>
 				<div class="menu__link__submenu">
 					<a class="menu__link--two" href="./nosotros.html" >NOSOTROS</a><hr>
-					<a class="menu__link--two" href="" >GALERIA</a>
+					<a class="menu__link--two" href="./galeria.html" >GALERIA</a>
 				</div>
-				<hr><a class="menu__link--three" href="" >OFERTA DE SERVICIOS</a><hr>
-				<a class="menu__link--four" href="" >PRODUCTOS</a><hr>
+				<hr><a class="menu__link--three" href="./servicios.html" >OFERTA DE SERVICIOS</a><hr>
+				<a class="menu__link--four" href="./products.html" >PRODUCTOS</a><hr>
 				<a class="menu__link--five" href="" >¿CÓMO SOY DISTRIBUIDOR?</a><hr>
 				<a class="menu__link--six" href="" >BLOG</a><hr>
 				<a class="menu__link--seven" href="" >CONTACTO</a>
