--- a/products.html
+++ b/products.html
@@ -79,7 +79,7 @@
 						</div>
 					</a>
 
-					<a class="header__desktop__pages--four" href="" >
+					<a class="header__desktop__pages--four" href="./products.html" >
 						PRODUCTOS
 
 						<div class="header__desktop__pages--four__form">
@@ -160,7 +160,7 @@
 					<a class="menu__link--two" href="./galeria.html" >GALERIA</a>
 				</div>
 				<hr><a class="menu__link--three" href="./servicios.html" >OFERTA DE SERVICIOS</a><hr>
-				<a class="menu__link--four" href="" >PRODUCTOS</a><hr>
+				<a class="menu__link--four" href="./products.html" >PRODUCTOS</a><hr>
 				<a class="menu__link--five" href="" >¿CÓMO SOY DISTRIBUIDOR?</a><hr>
 				<a class="menu__link--six" href="" >BLOG</a><hr>
 				<a class="menu__link--seven" href="" >CONTACTO</a>
