--- a/distribuidor.html
+++ b/distribuidor.html
@@ -10,7 +10,6 @@
 	<meta name="description" content="Venta e instalación de paneles Solares en Playa del Carmen. La mejor calidad y precio solo instalando Paneles solares en Playa del Carmen" />
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	
 </head>
 
@@ -265,7 +264,30 @@
             </div>
         </div>
 
-        <div class="distributor"></div>
+        <div class="distributor">
+            <!-- /*title*/ -->
+            <div class="container-sm">
+                <div class="distributor__title">
+                    <h1>Quiero ser Distribuidor Autorizado</h1>
+                    <p>¿Cómo puedo lograrlo?</p>
+                </div>
+            </div>
+
+            <div class="distributor__carousel">
+
+            </div>
+
+            <div class="container-sm">
+                <div class="distributor__callAction">
+                    <h2>Tienes una gran área de oportunidad de comercialización</h2>
+                    <h2><span>Ahora que lo sabes todo ¡Contáctanos!</span></h2>
+                    <a class="distributor__callAction__button" href="" >Únete y se un distribuidor</a>
+
+                </div>
+
+            </div>
+
+        </div>
 
         <div class="start_win">
             <div class="container-sm">
