--- a/servicios.html
+++ b/servicios.html
@@ -87,7 +87,7 @@
 						</div>
 					</a>
 
-					<a class="header__desktop__pages--five" href="" >
+					<a class="header__desktop__pages--five" href="./distribuidor.html" >
 						¿CÓMO SOY DISTRIBUIDOR?
 						
 						<div class="header__desktop__pages--four__form">
@@ -105,7 +105,7 @@
 							<div class="header__desktop__pages--six__form__circle"></div>
 						</div>
 					</a>
-					<a class="header__desktop__pages--seven" href="" >
+					<a class="header__desktop__pages--seven" href="./contacto.html" >
 						CONTACTO
 
 						<div class="header__desktop__pages--seven__form">
@@ -159,9 +159,9 @@
 				</div>
 				<hr><a class="menu__link--three" href="./servicios.html" >OFERTA DE SERVICIOS</a><hr>
 				<a class="menu__link--four" href="./products.html" >PRODUCTOS</a><hr>
-				<a class="menu__link--five" href="" >¿CÓMO SOY DISTRIBUIDOR?</a><hr>
+				<a class="menu__link--five" href="./distribuidor.html" >¿CÓMO SOY DISTRIBUIDOR?</a><hr>
 				<a class="menu__link--six" href="" >BLOG</a><hr>
-				<a class="menu__link--seven" href="" >CONTACTO</a>
+				<a class="menu__link--seven" href="./contacto.html" >CONTACTO</a>
 			</div>
 			
 		</div>
