--- a/distribuidor.html
+++ b/distribuidor.html
@@ -282,7 +282,7 @@
 						<!-- Slides -->
 						<div class="swiper-slide  distributor__carousel__slide">
 							<div class="distributor__carousel__slide__imagen">
-								<img src="./img/distributor/img-1.jpg" alt="carousel_productos" width="100%" height="100%" />
+								<img src="./img/distributor/empresa.jpg" alt="carousel_productos" width="100%" height="100%" />
 							</div>
 							<div class="distributor__carousel__slide__text">
 								<h1>1.-Tu empresa</h1>
@@ -297,7 +297,7 @@
 						<!-- Slides -->
 						<div class="swiper-slide  distributor__carousel__slide">
 							<div class="distributor__carousel__slide__imagen">
-								<img src="./img/distributor/img-1.jpg" alt="carousel_productos" width="100%" height="100%" />
+								<img src="./img/distributor/comercializacion.jpg" alt="carousel_productos" width="100%" height="100%" />
 							</div>
 							<div class="distributor__carousel__slide__text">
 								<h1>2.- Comercialización</h1>
@@ -310,7 +310,7 @@
 						<!-- Slides -->
 						<div class="swiper-slide  distributor__carousel__slide">
 							<div class="distributor__carousel__slide__imagen">
-								<img src="./img/distributor/img-1.jpg" alt="carousel_productos" width="100%" height="100%" />
+								<img src="./img/distributor/personal.jpg" alt="carousel_productos" width="100%" height="100%" />
 							</div>
 							<div class="distributor__carousel__slide__text">
 								<h1>3.- Personal</h1>
@@ -324,7 +324,7 @@
 						<!-- Slides -->
 						<div class="swiper-slide  distributor__carousel__slide">
 							<div class="distributor__carousel__slide__imagen">
-								<img src="./img/distributor/img-1.jpg" alt="carousel_productos" width="100%" height="100%" />
+								<img src="./img/distributor/experiencia.jpg" alt="carousel_productos" width="100%" height="100%" />
 							</div>
 							<div class="distributor__carousel__slide__text">
 								<h1>4.- Experiencia</h1>
