--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 				<div class="reduce_costs__grid">
 					<div class="reduce_costs__grid__item">
 						<div class="reduce_costs__grid__item__icon">
-							<img src="/img/home/ahorro.png" alt="ahorro" width="100%" height="100%"/>
+							<img src="./img/home/ahorro.png" alt="ahorro" width="100%" height="100%"/>
 						</div>
 	
 						<p>Ahorra dinero y energía</p>
@@ -292,7 +292,7 @@
 	
 					<div class="reduce_costs__grid__item">
 						<div class="reduce_costs__grid__item__icon">
-							<img src="/img/home/certificado.png" alt="certificado" width="100%" height="100%"/>
+							<img src="./img/home/certificado.png" alt="certificado" width="100%" height="100%"/>
 						</div>
 	
 						<p>Equipo certificado</p>
@@ -300,7 +300,7 @@
 	
 					<div class="reduce_costs__grid__item">
 						<div class="reduce_costs__grid__item__icon">
-							<img src="/img/home/precio.png" alt="precio" width="100%" height="100%"/>
+							<img src="./img/home/precio.png" alt="precio" width="100%" height="100%"/>
 						</div>
 	
 						<p>Precios competitivos</p>
