--- a/distribuidor.html
+++ b/distribuidor.html
@@ -254,7 +254,7 @@
                             </div>
 
                             <p>Gran oportunidad de negocio.</p>
-                            <p>¡Combrobada!</p>
+                            <p>¡Comprobada!</p>
                         </div>
 
                     </div>
@@ -286,8 +286,8 @@
 							</div>
 							<div class="distributor__carousel__slide__text">
 								<h1>1.-Tu empresa</h1>
-								<p>Tener una empresa establecida, ya sea Persona físicao Moral de preferencia tener un local comercial donde
-									se puedan exhibir los productos con la finalidad deque el usuario final ó próximo prospecto pueda ver la
+								<p>Tener una empresa establecida, ya sea Persona física o Moral de preferencia tener un local comercial donde
+									se puedan exhibir los productos con la finalidad de que el usuario final ó próximo prospecto pueda ver la
 									calidad del producto.</p>
 							</div>
 
@@ -328,7 +328,7 @@
 							</div>
 							<div class="distributor__carousel__slide__text">
 								<h1>4.- Experiencia</h1>
-								<p>Puedes o no tenerla, nosotros te capacitamos paracumplir con todas las expectativas del mercado.</p>
+								<p>Puedes o no tenerla, nosotros te capacitamos para cumplir con todas las expectativas del mercado.</p>
 							</div>
 
 						
