--- a/contacto.html
+++ b/contacto.html
@@ -218,7 +218,14 @@
 
 		<div class="hero_contact"></div>
         <div class="grid"></div>
-        <div class="location_contact"></div>
+        <div class="location_contact">
+			<div class="container-sm">
+				<div class="grid__item"></div>
+				<div class="grid__item"></div>
+				<div class="grid__item"></div>
+
+			</div>
+		</div>
 
 	</main>
 
