--- a/contacto.html
+++ b/contacto.html
@@ -220,7 +220,12 @@
         <div class="grid"></div>
         <div class="location_contact">
 			<div class="container-sm">
-				<div class="grid__item"></div>
+				<div class="grid__item">
+					<div class="grid__item__imagen">
+						<img src="./img/contact/monitoreo.jpg" alt="Imagen" width="100%" height="100%"/>
+					</div>
+					<p></p>
+				</div>
 				<div class="grid__item"></div>
 				<div class="grid__item"></div>
 
