--- a/contacto.html
+++ b/contacto.html
@@ -217,19 +217,40 @@
 	<main class="main">
 
 		<div class="hero_contact"></div>
-        <div class="grid"></div>
-        <div class="location_contact">
+
+        <div class="grid">
 			<div class="container-sm">
+
 				<div class="grid__item">
 					<div class="grid__item__imagen">
 						<img src="./img/contact/monitoreo.jpg" alt="Imagen" width="100%" height="100%"/>
 					</div>
-					<p></p>
+					<p>Incluye monitoreo y soporte en tu contratación.
+						¡Obtenlo ahora!</p>
 				</div>
-				<div class="grid__item"></div>
-				<div class="grid__item"></div>
+
+				<div class="grid__item">
+					<div class="grid__item__imagen">
+						<img src="./img/contact/producto.jpg" alt="Imagen" width="100%" height="100%"/>
+					</div>
+					<p>Incluye monitoreo y soporte en tu contratación.
+						¡Obtenlo ahora!</p>
+				</div>
+
+				<div class="grid__item">
+					<div class="grid__item__imagen">
+						<img src="./img/contact/ahorro.jpg" alt="Imagen" width="100%" height="100%"/>
+					</div>
+					<p>Incluye monitoreo y soporte en tu contratación.
+						¡Obtenlo ahora!</p>
+				</div>
+
 
 			</div>
+		</div>
+		
+        <div class="location_contact">
+			
 		</div>
 
 	</main>
