--- a/contacto.html
+++ b/contacto.html
@@ -249,7 +249,33 @@
 			</div>
 		</div>
 		
-        <div class="location_contact">
+        <div class="contact">
+
+				<div class="contact__location">
+
+					<div class="contact__location__map">
+						<img src="./img/contact/map.jpg" alt="map" width="100%" height="100%" />
+					</div>
+
+					<div class="contact__location__text">
+						<h1>Puerto Aventuras (Oficina Central)</h1>
+
+						<div class="contact__location__text__information">
+							<div class="contact__location__text__information__icon">
+								<img src="./img/contact/ubi.png" alt="icon" width="100%" height="100%"/>
+							</div>
+
+						</div>
+
+					</div>
+				</div>
+
+				<div class="container-sm">
+					<div class="contact__for">
+
+					</div>
+
+				</div>
 			
 		</div>
 
