--- a/contacto.html
+++ b/contacto.html
@@ -265,13 +265,61 @@
 								<img src="./img/contact/ubi.png" alt="icon" width="100%" height="100%"/>
 							</div>
 
+							<p>Puerto Maya M2 Lt7 Calzada Puerto Maya No Ext 3San Pedro C. P 77733 Zona Puerto Solidaridad</p>
+
+						</div>
+
+						<div class="contact__location__text__information">
+							<div class="contact__location__text__information__icon">
+								<img src="./img/contact/tel.png" alt="icon" width="100%" height="100%"/>
+							</div>
+
+							<p>01 (984) 802 9048 | 01 (984) 802 8571 | 01 (984) 688 5836</p>
+
+						</div>
+
+						<div class="contact__location__text__information">
+							<div class="contact__location__text__information__icon">
+								<img src="./img/contact/mail.png" alt="icon" width="100%" height="100%"/>
+							</div>
+
+							<p>contacto@yanopagoluz.mx</p>
+
 						</div>
 
 					</div>
 				</div>
 
 				<div class="container-sm">
-					<div class="contact__for">
+					<h1 class="title">Contáctanos</h1>
+					<div class="contact__contact">
+
+						<form class="contact__contact__form" action="./correo.php" method="post" >
+							<h1>Formulario de contacto</h1>
+							<p>Tu contratación incluye soporte, monitoreo web y reportes mensuales.</p>
+
+							<input name="nombre" type="text" placeholder="Nombre"/>
+							<input name="email" type="text" placeholder="Email"/>
+							<input name="telefono" type="text" placeholder="Telefono"/>
+							<input name ="direccion" type="text" placeholder="Dirección"/>
+
+							<h1 style="padding-bottom: 30px;">Formulario de contacto</h1>
+							<input name="nombre_cfe" type="text" placeholder="Coloque el nombre tal cual viene en el recibo CFE (1)"/>
+							<input name="number_cfe" type="text" placeholder="Favor de ingresar el número completo que viene en su recibo CFE (2)"/>
+							<textarea name="mensaje" placeholder="Mensaje"></textarea>		
+
+							<div class="contact__contact__form__checkbox">
+								<input type="checkbox"/> 
+								<p style="padding-bottom: 0; color: #F7C50A;">Acepto las Políticas de privacidad</p>	
+							</div>	
+							
+							<button type="button" value="enviar" class="contact__contact__form__button" id="button">Enviar</button>						
+
+						</form>
+
+						<div class="contact__contact__imagen">
+							<img src="./img/contact/factura.jpg" alt="recibo" width="100%" height="100%" />
+						</div>
 
 					</div>
 
