--- a/contacto.html
+++ b/contacto.html
@@ -313,7 +313,7 @@
 								<p style="padding-bottom: 0; color: #F7C50A;">Acepto las Políticas de privacidad</p>	
 							</div>	
 							
-							<button type="submit" value="enviar" class="contact__contact__form__button" id="button">Enviar</button>						
+							<button type="submit" name="enviar" value="Send" class="contact__contact__form__button" id="button">Enviar</button>						
 
 						</form>
 
