--- a/contacto.html
+++ b/contacto.html
@@ -294,7 +294,7 @@
 					<h1 class="title">Contáctanos</h1>
 					<div class="contact__contact">
 
-						<form class="contact__contact__form" id="form">
+						<form class="contact__contact__form" id="form" method="post" action="correo.php">
 							<h1>Formulario de contacto</h1>
 							<p class="subtitle">Tu contratación incluye soporte, monitoreo web y reportes mensuales.</p>
 
