--- a/contacto.html
+++ b/contacto.html
@@ -361,7 +361,7 @@
 		<h1>2023 Ya no pago luz. Todos los derechos reservados. | Por Licorne Marketing Digital</h1>
 	</footer>
 
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 	<script src="./js/menu.js"></script>
 	<script src="./js/distribuitor.js"></script>
