--- a/contacto.html
+++ b/contacto.html
@@ -326,7 +326,7 @@
 							</div>
 
 							<div class="contact__contact__form__input_number_cfe">
-								<input id="number_cfe" name="nombre_cfe" type="text" placeholder="Favor de ingresar el número completo que viene en su recibo CFE (2)"/>
+								<input id="number_cfe" name="number_cfe" type="text" placeholder="Favor de ingresar el número completo que viene en su recibo CFE (2)"/>
 								<p class="contact__contact__form__input_number_cfe__error">Coloca el numero de CFE</p>
 							</div>
 							
