--- a/thanks.html
+++ b/thanks.html
@@ -216,7 +216,17 @@
 	<!-- MAIN -->
 	<main class="main">
 
-		<p>Gracias</p>
+		<div class="thanks">
+            <div class="container-sm">
+                <h1>¡Gracias por contactarnos,</h1>
+                <h1>en breve nos pondremos en contacto contigo!</h1>
+
+                <div class="thanks__imagen">
+                    <img src="./img/home/thanks.png" alt="thanks" width="100%" height="100%"/>
+                </div>
+            </div>
+            
+        </div>
 
 	</main>
 
