--- a/distribuidor.html
+++ b/distribuidor.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link rel="icon" type="image/x-icon" href="./img/solar-energia.png" />
+	<link rel="icon" type="image/x-icon" href="./public/logo.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Venta e Instalación de Paneles Solares</title>
 	<meta name="description" content="Venta e instalación de paneles Solares en Playa del Carmen. La mejor calidad y precio solo instalando Paneles solares en Playa del Carmen" />
@@ -329,8 +329,8 @@
 
             <div class="container-sm">
                 <div class="distributor__callAction">
-                    <h2>Tienes una gran área de oportunidad de comercialización</h2>
-                    <h2><span>Ahora que lo sabes todo ¡Contáctanos!</span></h2>
+                    <h2 style="padding: 20px 0 15px 0;">Tienes una gran área de oportunidad de comercialización</h2>
+                    <h2 style="padding: 5px 0 20px 0;"><span>Ahora que lo sabes todo ¡Contáctanos!</span></h2>
                     <a class="distributor__callAction__button" href="" >Únete y se un distribuidor</a>
 
                 </div>
