--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link rel="icon" type="image/x-icon" href="./img/solar-energia.png" />
+	<link rel="icon" type="image/x-icon" href="./public/logo.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Venta e Instalación de Paneles Solares</title>
 	<meta name="description" content="Venta e instalación de paneles Solares en Playa del Carmen. La mejor calidad y precio solo instalando Paneles solares en Playa del Carmen" />
