--- a/servicios.html
+++ b/servicios.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link rel="icon" type="image/x-icon" href="./img/solar-energia.png" />
+	<link rel="icon" type="image/x-icon" href="./public/logo.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Venta e Instalación de Paneles Solares</title>
 	<meta name="description" content="Venta e instalación de paneles Solares en Playa del Carmen. La mejor calidad y precio solo instalando Paneles solares en Playa del Carmen" />
@@ -380,7 +380,8 @@
 						
 				</div>
 
-				<h1 class="subtitle">Tu que pagas grandes cantidades de dinero en luz ¡Te estamos buscando!</h1>
+				<h1 class="subtitle" style="margin: 50px 0  10px 0 ;">Tu que pagas grandes cantidades de dinero en luz</h1>
+				<h1 class="subtitle"  style="margin: 10px 0  50px 0 ;"> ¡Te estamos buscando!</h1>
 				<p class="subtitle">Queremos que te ahorres ese dinero que gastas en tu consumo de luz y gas.Acércate con nosotros y ahórrate hasta un 95% de lo que gastas.</p>
 				<a class="benefit__button"  href="" >¡Cotiza hoy mismo!</a>
 			</div>
