--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 										<h1>Ahorra hasta el 90%</h1>
 										<p>el pago de luz</p>
 	
-										<a class="hero__form--one__text__button" href="">¡Quiero saber más!</button></a>
+										<a href="./servicios.html" class="hero__form--one__text__button" href="">¡Quiero saber más!</button></a>
 	
 									</div>
 			
@@ -239,7 +239,7 @@
 										<h1>La industria hotelera</h1>
 										<p>una opción para implementar paneles solares </p>
 	
-										<a class="hero__form--two__text__button" href="">¡Quiero saber más!</button></a>
+										<a href="./servicios.html" class="hero__form--two__text__button" href="">¡Quiero saber más!</button></a>
 	
 									</div>
 			
@@ -311,7 +311,7 @@
 			<div class="container-sm">
 				<h1>¡Adquiere la promoción del mes!</h1>
 				<p>Oferta de Panel Solar de 360w, instalado y trabajando con Microinversores a $8.990 cada uno. *Disponible hasta agotar existencias.</p>
-				<a class="promotion__button"  href="" >¡Quiero una cotización!</a>
+				<a href="./contacto.html" class="promotion__button"  href="" >¡Quiero una cotización!</a>
 			</div>
 
 		</div>
@@ -323,7 +323,7 @@
 					<h2>¡Distribuye paneles y calentadores solares!</h2>
 					<p>México se encuentra en expansión en el mercado de las energías alternativas, se espera que en los próximos años este incremento sea considerablemente mayor. Si estás interesado en distribuir nuestros productos, llámanos para recibir más información y sepas nuestros beneficios.</p>
 					<h4>¡Ven y Forma parte de nuestro equipo!</h4>
-					<a class="win_win__text__button">¡Comienza a ganar!</a>
+					<a href="./distribuidor.html" class="win_win__text__button">¡Comienza a ganar!</a>
 				</div>
 				<div class="win_win__imagen">
 					<img src="./img/home/casas.png" alt="casas" width="100%" height="100%" />
@@ -420,7 +420,7 @@
 				<div class="sale__text">
 					<h1>Venta e Instalación de Paneles Solares</h1>
 					<p>Paneles solares, diseño e instalación de sistemas con energía solar fotovoltaica, térmica solar e iluminación led, ahorro de energía.</p>
-					<a class="sale__text__button">¡Conócenos!</a>
+					<a href="./nosotros.html" class="sale__text__button">¡Conócenos!</a>
 				</div>
 
 			</div>
