--- a/products.html
+++ b/products.html
@@ -213,7 +213,7 @@
 			<div class="instalation__grid">
 				<div class="instalation__grid__text">
 					<h1>Venta e Instalación de Paneles Solares</h1>
-					<a class="promotion__button"  href="" >¡Cotiza hoy mismo!</a>
+					<a href="./contacto.html" class="promotion__button"  href="" >¡Cotiza hoy mismo!</a>
 				</div>
 				
 				<div class="instalation__grid__carousel">
