--- a/servicios.html
+++ b/servicios.html
@@ -383,7 +383,7 @@
 				<h1 class="subtitle" style="margin: 50px 0  10px 0 ;">Tu que pagas grandes cantidades de dinero en luz</h1>
 				<h1 class="subtitle"  style="margin: 10px 0  50px 0 ;"> ¡Te estamos buscando!</h1>
 				<p class="subtitle">Queremos que te ahorres ese dinero que gastas en tu consumo de luz y gas.Acércate con nosotros y ahórrate hasta un 95% de lo que gastas.</p>
-				<a class="benefit__button"  href="" >¡Cotiza hoy mismo!</a>
+				<a href="./contacto.html" class="benefit__button"  href="" >¡Cotiza hoy mismo!</a>
 			</div>
 		</div>
 
