--- a/distribuidor.html
+++ b/distribuidor.html
@@ -331,7 +331,7 @@
                 <div class="distributor__callAction">
                     <h2 style="padding: 20px 0 15px 0;">Tienes una gran área de oportunidad de comercialización</h2>
                     <h2 style="padding: 5px 0 20px 0;"><span>Ahora que lo sabes todo ¡Contáctanos!</span></h2>
-                    <a class="distributor__callAction__button" href="" >Únete y se un distribuidor</a>
+                    <a href="./contacto.html" class="distributor__callAction__button" href="" >Únete y se un distribuidor</a>
 
                 </div>
 
