--- a/galeria.html
+++ b/galeria.html
@@ -24,7 +24,7 @@
 
 				<div class="header__mobile__top">
 
-					<button class="header__mobile__top__toggle" type="button" id="whastApp">
+					<button class="header__mobile__top__toggle" type="button" id="whastApp" aria-label="whastApp">
 						<span class="header__mobile__top__toggle__bar"></span>
 					</button>
 				
