--- a/nosotros.html
+++ b/nosotros.html
@@ -259,7 +259,7 @@
 							clientes en reducción de gastos y al mismo tiempo cuidando el medio ambiente día a día.</p>
 					</div>
 
-					<a href="./contacto.html" class="goal__text__button" href="" >¡Comienza hoy!</a>
+					<a href="./contacto.html" class="goal__text__button"  >¡Comienza hoy!</a>
 
 				</div>
 
