--- a/plantilla.html
+++ b/plantilla.html
@@ -31,7 +31,7 @@
 					</button>
 				
 					<div class="header__mobile__top__logo">
-						<img src="img/solar-energia.png" alt ="logo-header" width="100%" height="100%" />
+						<img src="img/solar-energia.webp" alt ="logo-header" width="100%" height="100%" />
 					</div>
 				</div>
 				
@@ -45,7 +45,7 @@
 			<div class="container-sm">
 
 				<div class="header__desktop__logo">
-					<img src="img/solar-energia.png" alt ="logo-header" width="100%" height="100%" />
+					<img src="img/solar-energia.webp" alt ="logo-header" width="100%" height="100%" />
 				</div>
 
 				<div class="header__desktop__pages">
