--- a/nosotros.html
+++ b/nosotros.html
@@ -214,7 +214,7 @@
 						importancia en el país, en asuntos gubernamentales a nivel estatal y municipal,tanto comercial como residencial.</p>
 				</div>
 				<div class="us__imagen">
-					<img src="./img/us/nos.1.png" alt="us" width="100%" height="100%" />
+					<img src="./img/us/nos-1.webp" alt="us" width="100%" height="100%" />
 				</div>
 			</div>
 		</div>
@@ -224,15 +224,15 @@
 				<h1>CONTAMOS CON CERTIFICACIONES CONFIABLES</h1>
 				<div class="certification__grid">
 					<div class="certification__grid_img">
-						<img src="./img/us/firco.png" alt="marcaOne" width="100%" height="100%" />
+						<img src="./img/us/firco.webp" alt="marcaOne" width="100%" height="100%" />
 					</div>
 
 					<div class="certification__grid_img">
-						<img src="./img/us/undp.png" alt="marcaTwo" width="100%" height="100%" />
+						<img src="./img/us/undp.webp" alt="marcaTwo" width="100%" height="100%" />
 					</div>
 
 					<div class="certification__grid_img">
-						<img src="./img/us/ance.png" alt="marcaThree" width="100%" height="100%" />
+						<img src="./img/us/ance.webp" alt="marcaThree" width="100%" height="100%" />
 					</div>
 
 				</div>
@@ -243,7 +243,7 @@
 			<div class="container-sm">
 
 				<div class="goal__imagen">
-					<img src="./img/us/poste-f.png" alt="Poste_f" width="100%" height="100%" />
+					<img src="./img/us/poste-f.webp" alt="Poste_f" width="100%" height="100%" />
 				</div>
 				<div class="goal__text">
 
@@ -275,7 +275,7 @@
 					<div class="situation__grid__item">
 
 						<div class="situation__grid__item__logo">
-							<img src="./img/us/estudio.png" alt="studio" width="100%" height="100%" />
+							<img src="./img/us/estudio.webp" alt="studio" width="100%" height="100%" />
 						</div>
 						<h2>ESTUDIO</h2>
 						<p>Pensando en el bienestar de nuestra gente,analizamos la situación actual energética
@@ -285,7 +285,7 @@
 					<div class="situation__grid__item">
 
 						<div class="situation__grid__item__logo">
-							<img src="./img/us/desarrollo.png" alt="desarrollo" width="100%" height="100%" />
+							<img src="./img/us/desarrollo.webp" alt="desarrollo" width="100%" height="100%" />
 						</div>
 						<h2>DESARROLLO</h2>
 						<p>Con base al estudio previo, desarrollamos y cuantificamos los ahorros potenciales, así
@@ -295,7 +295,7 @@
 					<div class="situation__grid__item">
 
 						<div class="situation__grid__item__logo">
-							<img src="./img/us/aplicacion.png" alt="studio" width="100%" height="100%" />
+							<img src="./img/us/aplicacion.webp" alt="studio" width="100%" height="100%" />
 						</div>
 						<h2>APLICACIÓN</h2>
 						<p>Contamos con personal capacitado para llevar a cabo la tarea de aplicar desarrollos
@@ -305,7 +305,7 @@
 					<div class="situation__grid__item">
 
 						<div class="situation__grid__item__logo">
-							<img src="./img/us/monitoreo.png" alt="studio" width="100%" height="100%" />
+							<img src="./img/us/monitoreo.webp" alt="studio" width="100%" height="100%" />
 						</div>
 						<h2>MONITOREO</h2>
 						<p>Mediante un monitoreo de margen de consumo mantenemos el aprovechamiento de la energía
