--- a/galeria.html
+++ b/galeria.html
@@ -250,36 +250,36 @@
                 </div>
 
                 <div class="carousel catalog__carousel_fotovoltaico">
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-1.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-2.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-3.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-4.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-5.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-6.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-7.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-8.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-9.jpg" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-1.webp" alt="galeria_image_one" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-2.webp" alt="galeria_image_two" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-3.webp" alt="galeria_image_three" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-4.webp" alt="galeria_image_four" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-5.webp" alt="galeria_image_five" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-6.webp" alt="galeria_image_six" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-7.webp" alt="galeria_image_seven" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-8.webp" alt="galeria_image_eigth" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/fotovoltaico/image-9.webp" alt="galeria_image_nueve" width="100%" height="100%"></div>
                 </div>
 
                 <div class="carousel catalog__carousel_termico">
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-10.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-11.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-12.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-13.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-14.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-15.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-16.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-17.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-18.jpg" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-10.webp" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-11.webp" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-12.webp" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-13.webp" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-14.webp" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-15.webp" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-16.webp" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-17.webp" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/termico-s/image-18.webp" alt="galeria_image" width="100%" height="100%"></div>
                 </div>
 
                 <div class="carousel catalog__carousel_ilumination">
-                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-19.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-20.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-21.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-22.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-23.jpg" alt="galeria_image" width="100%" height="100%"></div>
-                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-24.jpg" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-19.webp" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-20.webp" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-21.webp" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-22.webp" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-23.webp" alt="galeria_image" width="100%" height="100%"></div>
+                    <div class="carousel-item"><img src="./img/gallery/iluminacion/image-24.webp" alt="galeria_image" width="100%" height="100%"></div>
                 </div>
             </div>
         </div>
