--- a/servicios.html
+++ b/servicios.html
@@ -205,7 +205,7 @@
             <div class="container-sm">
                 
                 <div class="offer__imagen">
-                    <img src="./img/services//ofservicios.png" alt="offer" width="100%" height="100%" />
+                    <img src="./img/services//ofservicios.webp" alt="offer" width="100%" height="100%" />
                 </div>
 
                 <div class="offer__text">
@@ -232,7 +232,7 @@
 
                     <div class="renewable__grid__item">
                         <div class="renewable__grid__item__icon">
-							<img src="./img/services/seguridad.png" alt="icon_energia" width="100%" height="100%" />
+							<img src="./img/services/seguridad.webp" alt="icon_energia" width="100%" height="100%" />
 						</div>
 						<div class="renewable__grid__item__text">
 							<p>Instalación segura</p>
@@ -241,7 +241,7 @@
 
 					<div class="renewable__grid__item">
                         <div class="renewable__grid__item__icon">
-							<img src="./img/services/profesionalismo.png" alt="icon_energia" width="100%" height="100%" />
+							<img src="./img/services/profesionalismo.webp" alt="icon_energia" width="100%" height="100%" />
 						</div>
 						<div class="renewable__grid__item__text">
 							<p>Profesionalismo</p>
@@ -250,7 +250,7 @@
 
 					<div class="renewable__grid__item">
                         <div class="renewable__grid__item__icon">
-							<img src="./img/services/puntualidad.png" alt="icon_energia" width="100%" height="100%" />
+							<img src="./img/services/puntualidad.webp" alt="icon_energia" width="100%" height="100%" />
 						</div>
 						<div class="renewable__grid__item__text">
 							<p>Puntualidad</p>
@@ -259,7 +259,7 @@
 
 					<div class="renewable__grid__item">
                         <div class="renewable__grid__item__icon">
-							<img src="./img/services/durabilidad.png" alt="icon_energia" width="100%" height="100%" />
+							<img src="./img/services/durabilidad.webp" alt="icon_energia" width="100%" height="100%" />
 						</div>
 						<div class="renewable__grid__item__text">
 							<p>Durabilidad de por vida</p>
@@ -296,7 +296,7 @@
 
 
 				<div class="our_services__fotovoltaico__imagen">
-					<img src="./img/services/fotovol.png" alt="services" width="100%" height="100%" />
+					<img src="./img/services/fotovol.webp" alt="services" width="100%" height="100%" />
 				</div>
 			</div>
 
@@ -304,7 +304,7 @@
 			<div class="our_services__residencial">
 
 				<div class="our_services__residencial__imagen">
-					<img src="./img/services/residen.png" alt="services" width="100%" height="100%" />
+					<img src="./img/services/residen.webp" alt="services" width="100%" height="100%" />
 				</div>
 
 				<div class="our_services__residencial__text container-sm">
@@ -327,7 +327,7 @@
 
 
 				<div class="our_services__industria__imagen">
-					<img src="./img/services/ind.png" alt="services" width="100%" height="100%" />
+					<img src="./img/services/ind.webp" alt="services" width="100%" height="100%" />
 				</div>
 			</div>
 				
@@ -342,7 +342,7 @@
 					<div class="benefit__grid__item">
 
 						<div class="benefit__grid__item__icon">
-							<img src="./img/services/ahorro.png" alt="benefit" width="100%" height="100%" />
+							<img src="./img/services/ahorro.webp" alt="benefit" width="100%" height="100%" />
 						</div>
 
 						<div class="benefit__grid__item__text">
@@ -355,7 +355,7 @@
 					<div class="benefit__grid__item">
 
 						<div class="benefit__grid__item__icon">
-							<img src="./img/services/energía.png" alt="benefit" width="100%" height="100%" />
+							<img src="./img/services/energía.webp" alt="benefit" width="100%" height="100%" />
 						</div>
 
 						<div class="benefit__grid__item__text">
@@ -368,7 +368,7 @@
 					<div class="benefit__grid__item">
 
 						<div class="benefit__grid__item__icon">
-							<img src="./img/services/post-venta.png" alt="benefit" width="100%" height="100%" />
+							<img src="./img/services/post-venta.webp" alt="benefit" width="100%" height="100%" />
 						</div>
 
 						<div class="benefit__grid__item__text">
