--- a/products.html
+++ b/products.html
@@ -224,15 +224,15 @@
 							
 							<!-- Slides -->
 							<div class="swiper-slide instalation__grid__carousel--imagen">
-								<img src="./img/products/gal-1.jpg" alt="galery" width="100%" height="100%"/>
+								<img src="./img/products/gal-1.webp" alt="galery" width="100%" height="100%"/>
 							</div>
 							
 							<div class="swiper-slide instalation__grid__carousel--imagen">
-								<img src="./img/products/gal-2.jpg" alt="galery" width="100%" height="100%"/>
+								<img src="./img/products/gal-2.webp" alt="galery" width="100%" height="100%"/>
 							</div>
 
 							<div class="swiper-slide instalation__grid__carousel--imagen">
-								<img src="./img/products/gal-3.jpg" alt="galery" width="100%" height="100%"/>
+								<img src="./img/products/gal-3.webp" alt="galery" width="100%" height="100%"/>
 							</div>
 
 						</div>
@@ -252,7 +252,7 @@
             <div class="container-sm">
 
                 <div class="panels__imagen">
-                    <img src="./img/products/img-fotov.png" alt="panels_products" width="100%" height="100%" />
+                    <img src="./img/products/img-fotov.webp" alt="panels_products" width="100%" height="100%" />
                 </div>
 
                 <div class="panels__text">
